kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: sysopsdev/portfolio
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
