kubernetes/portfolio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - chriskennedy.dev
    secretName: example-tls
  rules:
  - host: chriskennedy.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: portfolio
          servicePort: 80
